rust/rust-build-output.txt
    Blocking waiting for file lock on build directory
   Compiling rust_sketch v0.35.3-SNAPSHOT (/workspaces/sleeper/rust/rust_sketch)
    Checking objectstore_ext v0.35.3-SNAPSHOT (/workspaces/sleeper/rust/objectstore_ext)
    Checking filter_udfs v0.35.3-SNAPSHOT (/workspaces/sleeper/rust/filter_udfs)
    Checking aggregator_udfs v0.35.3-SNAPSHOT (/workspaces/sleeper/rust/aggregator_udfs)
   Compiling sleeper_df v0.35.3-SNAPSHOT (/workspaces/sleeper/rust/sleeper_df)
error[E0432]: unresolved import `datafusion::logical_expr::simplify::SimplifyInfo`
  --> aggregator_udfs/src/nonnull.rs:35:9
   |
35 |         simplify::SimplifyInfo,
   |         ^^^^^^^^^^^^^^^^^^^^^^ no `SimplifyInfo` in `simplify`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `aggregator_udfs` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0599]: no function or associated item named `new` found for struct `datafusion::logical_expr::simplify::SimplifyContext` in the current scope
    --> aggregator_udfs/src/nonnull.rs:1109:31
     |
1109 |             &SimplifyContext::new(&ExecutionProps::new()),
     |                               ^^^ function or associated item not found in `datafusion::logical_expr::simplify::SimplifyContext`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `aggregator_udfs` (lib test) due to 2 previous errors
